# movie-actor-ranking

.github/workflows/: api-production-build.yml  main_api-movieactorranking-prod.yml  web-production-build.yml
movie-actor-ranking-api/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  schema.prisma
movie-actor-ranking-api/notebooks/: evaluation.ipynb
movie-actor-ranking-api/scripts/: import_data.sh
movie-actor-ranking-api/src/: config.py  main.py
movie-actor-ranking-api/src/api/: actor_api.py
movie-actor-ranking-api/src/data_preprocessing/: actor_classfication.py  imdb_imsdb_merge.py  script_preprocessing.py
movie-actor-ranking-api/src/db/: actor.py  actor_classifier.py  models.py  movie.py  role.py  script.py  session.py
movie-actor-ranking-api/src/db/helpers/: init_database.py
movie-actor-ranking-api/src/evaluation/: evaluation.py
movie-actor-ranking-api/src/information_retrieval/: classified_vector_space_model.py  token_vector_space_model.py
movie-actor-ranking-api/src/scraper/: imdb_scraper.py  imsdb_scraper.py
movie-actor-ranking-api/src/utils/: classification_eval.py
movie-actor-ranking-app/: next.config.ts  package-lock.json  package.json
movie-actor-ranking-app/app/: layout.tsx  page.tsx  providers.tsx
movie-actor-ranking-app/app/api/: movieActorRanking.ts
movie-actor-ranking-app/app/components/: ResultsList.tsx  SearchComponent.tsx
movie-actor-ranking-app/components/: theme-switch.tsx
movie-actor-ranking-app/styles/: globals.css
