[project]
name = "movie-actor-ranking-api"
version = "0.1.0"
description = "Movie Actor Ranking API"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "beautifulsoup4>=4.14.2",
    "cinemagoer>=2023.5.1",
    "fastapi>=0.121.2",
    "fuzzywuzzy>=0.18.0",
    "gunicorn>=23.0.0",
    "marshmallow>=4.1.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prisma>=0.15.0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "scikit-learn>=1.7.2",
    "selenium>=4.38.0",
    "slowapi>=0.1.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
